[tool.poetry]
name = "turbocharge_infoblox_api"
version = "0.1.0"
description = "scripts used in the turbo charge wapi article series"
authors = ["Patrick Piper <patrick@ddiguru.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
aiohttp = "^3.8.1"
async-timeout = "^4.0.1"
attrs = "^21.2.0"
python-dotenv = "^0.19.2"
netaddr = "^0.8.0"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
